Componentes Professor, Disciplina, Home e Aluno

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,16 @@
 <div>
   <header class="header">
-    <div class="header__title">API ACADEMICO</div>
+    <div class="marca">
+      <img src="https://www.ifs.edu.br/comunicacao/images/Imagens/Marcas/IFS_puro/IFS---horizontal-01.png" alt="">
+      <div class="header__title">API ACADEMICO</div>
+
+    </div>
     <nav class="header__nav">
       <a routerLink="/" routerLinkActive="active">Home</a>
       <a routerLink="/aluno" routerLinkActive="active">Aluno</a>
-      <!-- <a routerLink="/professor" routerLinkActive="active">Professor</a>
+      <a routerLink="/professor" routerLinkActive="active">Professor</a>
       <a routerLink="/disciplina" routerLinkActive="active">Disciplina</a>
-      <a routerLink="/turma" routerLinkActive="active">Turma</a> -->
+      <a routerLink="/turma" routerLinkActive="active">Turma</a>
     </nav>
   </header>
 
