--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
       <a routerLink="/aluno" routerLinkActive="active">Aluno</a>
       <a routerLink="/professor" routerLinkActive="active">Professor</a>
       <a routerLink="/disciplina" routerLinkActive="active">Disciplina</a>
+      <a routerLink="/matricula" routerLinkActive="active">Matricula</a>
       <a routerLink="/turma" routerLinkActive="active">Turma</a>
     </nav>
   </header>
