--- a/src/app/professor/professor.component.html
+++ b/src/app/professor/professor.component.html
@@ -55,10 +55,10 @@
         <th>Matricula</th>
         <th>Nome</th>
         <th>CPF</th>
-        <th>Data de Nascimento</th>
+        <!-- <th>Data de Nascimento</th> -->
         <th>Email</th>
         <th>Celular</th>
-        <th>Apelido</th>
+        <!-- <th>Apelido</th> -->
         <th>Deletar</th>
       </tr>
     </thead>
@@ -66,12 +66,12 @@
       <tr *ngFor="let professor of professores">
         <td>{{ professor.id }}</td>
         <td>{{ professor.matricula }}</td>
-        <td>{{ professor.nome }}</td>
+        <td id="td-nome">{{ professor.nome }}</td>
         <td>{{ professor.cpf }}</td>
-        <td>{{ professor.dataNascimento | date }}</td>
+        <!-- <td>{{ professor.dataNascimento | date }}</td> -->
         <td>{{ professor.email }}</td>
         <td>{{ professor.celular }}</td>
-        <td>{{ professor.apelido || 'N/A' }}</td>
+        <!-- <td>{{ professor.apelido || 'N/A' }}</td> -->
         <td><i class="fas fa-trash" (click)="deletarProfessor(professor.id!)"></i></td>
       </tr>
     </tbody>
