ajuste requisições disciplina e matricula

--- a/src/app/disciplina/disciplina.component.html
+++ b/src/app/disciplina/disciplina.component.html
@@ -13,8 +13,8 @@
 
 
       <div>
-        <label for="credito">Creditos:</label>
-        <input type="number" id="credito" formControlName="credito" />
+        <label for="numeroCreditos">Creditos:</label>
+        <input type="number" id="numeroCreditos" formControlName="numeroCreditos" />
       </div>
       <div>
         <label for="professorId">Professor Id:</label>
