Adição de metodos e validação ref a FKs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,14 @@
 
     </div>
     <nav class="header__nav">
-      <a routerLink="/" routerLinkActive="active">Home</a>
-      <a routerLink="/aluno" routerLinkActive="active">Aluno</a>
-      <a routerLink="/professor" routerLinkActive="active">Professor</a>
-      <a routerLink="/disciplina" routerLinkActive="active">Disciplina</a>
-      <a routerLink="/matricula" routerLinkActive="active">Matricula</a>
-      <a routerLink="/turma" routerLinkActive="active">Turma</a>
+      <ul>
+        <li><a routerLink="/" routerLinkActive="active">Home</a></li>
+        <li><a routerLink="/aluno" routerLinkActive="active">Aluno</a></li>
+        <li><a routerLink="/professor" routerLinkActive="active">Professor</a></li>
+        <li><a routerLink="/disciplina" routerLinkActive="active">Disciplina</a></li>
+        <li><a routerLink="/matricula" routerLinkActive="active">Matricula</a></li>
+        <li><a routerLink="/turma" routerLinkActive="active">Turma</a></li>
+      </ul>
     </nav>
   </header>
 
