--- a/src/app/disciplina/disciplina.component.html
+++ b/src/app/disciplina/disciplina.component.html
@@ -34,7 +34,7 @@
     {{ errorMensagem }}
   </div>
 
-  <table id="table-minor" *ngIf="disciplinas.length > 0">
+  <table class="table-minor" *ngIf="disciplinas.length > 0">
     <thead>
       <tr>
         <th>ID</th>
