--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
 <div>
   <main>
-    <div>
+    <div id="title">
       <h3>API Academico</h3>
-      <span>Foi um projeto apresentado nas avaliações da disciplinas Tópicos Especiais.</span>
+      <span>Foi um projeto apresentado nas avaliações da disciplina Tópicos Especiais.</span>
     </div>
+    <div id="logo"></div>
   </main>
 </div>
