--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,4 @@
-main{
+#logo{
   background-image: url(https://www.ifs.edu.br/comunicacao/images/Imagens/Marcas/IFS_puro/IFS---horizontal-01.png);
   background-repeat: no-repeat;
   background-size: contain; 
@@ -8,5 +8,6 @@ main{
   justify-content: center;
   margin: 0;
   padding: 0;
-  opacity: 0.7;
+  opacity: 0.5;
 }
+
